# nixos-config

./: .gitignore  .ignore  NETWORK_CN.md  README.md  VERSION  config.yaml  configuration.nix  flake.nix  host.nix  install.sh  local.nix.example  result  run.sh
.github/workflows/: ci.yml  release-mcbctl.yml
catalog/: groups.toml  home-options.toml  packages.toml  workflows.toml
docs/: DEPLOY_AUDIT_CN.md  DETAILS.md  NETWORK_CN.md  SHELL_CN.md  STRUCTURE.md  USAGE.md  UX_MAINLINE_CN.md  UX_SPEC_CN.md
dotfiles/alacritty/: alacritty.toml
dotfiles/gtk-4.0/: settings.ini
dotfiles/helix/: config.toml
dotfiles/niri/: config.kdl
dotfiles/waybar/: style.css
dotfiles/zsh/: .zshrc
home/: home.nix
home/mcbnixos/: home.nix
home/modules/: base.nix  desktop.nix  git.nix  packages.nix  personal-packages.nix  programs.nix  shell.nix
home/profiles/: full.nix  minimal.nix
home/scripts/: niri-run  wallpaper-random  waybar-flake-updates  waybar-net-speed  waybar-proxy-status
hosts/_support/: hardware-configuration-eval.nix
hosts/laptop/: default.nix
hosts/nixos/: default.nix
hosts/nixos-dev/: default.nix
hosts/profiles/: base.nix  desktop.nix  server.nix
hosts/server/: default.nix
hosts/templates/: README.md
mcbctl/: Cargo.toml  README.md
mcbctl/.cargo/: config.toml
mcbctl/src/: health.rs  lib.rs  release_bundle.rs  repo.rs
mcbctl/src/domain/: deploy.rs  mod.rs  tui.rs
mcbctl/src/domain/tui/: catalog.rs  deploy.rs  managed.rs  mod.rs  navigation.rs  text.rs
mcbctl/src/store/: catalog.rs  context.rs  deploy.rs  home.rs  hosts.rs  mod.rs  packages.rs  search.rs
mcbctl/src/store/hosts/: eval.rs  layout.rs  render.rs
mcbctl/src/tui/: app.rs  mod.rs  state.rs
mcbctl/src/tui/state/: actions.rs  deploy.rs  helpers.rs  home.rs  hosts.rs  inspect.rs  model.rs  overview.rs  packages.rs
mcbctl/src/tui/state/actions/: display.rs  execute.rs  support.rs
mcbctl/src/tui/state/hosts/: runtime.rs  users.rs
mcbctl/src/tui/state/hosts/runtime/: display.rs  edit.rs  persist.rs  validate.rs
mcbctl/src/tui/views/: actions.rs  dashboard.rs  deploy.rs  health.rs  home.rs  hosts.rs  inspect.rs  mod.rs  packages.rs  summary.rs  users.rs
mcbctl/src/tui/views/deploy/: advanced.rs  apply.rs  chrome.rs  shared.rs  test_support.rs
modules/: boot.nix  default.nix  desktop.nix  fonts.nix  gaming.nix  i18n.nix  networking.nix  nix.nix  options.nix  packages.nix  security.nix  services.nix  users.nix  virtualization.nix
modules/hardware/: gpu.nix
modules/nixos/: boot.nix  desktop.nix  fonts.nix  networking.nix  nix.nix  services.nix  users.nix  virtualization.nix
modules/options/: assertions.nix  desktop.nix  flatpak.nix  hardware.nix  networking.nix  nix.nix  services.nix  users.nix
modules/services/: core.nix  desktop.nix
modules/shared/: vars.nix
nixos/modules/: default.nix  i18n.nix  networking.nix  security.nix  services.nix  users.nix
overlays/: default.nix
pkgs/: yesplaymusic.nix
pkgs/gridix/: default.nix  source.nix
pkgs/lib/: update-helpers.sh
pkgs/mcbctl/: default.nix
pkgs/scripts/: update-upstream-apps.sh
pkgs/scripts-rs/: default.nix
pkgs/zed/: default.nix  (+1 more)
scripts/: README.md  clean.sh  doctor.sh  flake_update.sh  home_refresh.sh  install.sh  install_from_github.sh  lib.sh  preflight.sh  rebuild.sh  status.sh  sync_cloud.sh  sync_etc.sh  sync_hardware.sh  toolchain.sh
scripts-rs/: Cargo.toml  README.md
scripts-rs/src/: lib.rs  main.rs
secrets/: .sops.yaml
(+201 files in other folders)
