[package]
name = "scripts-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
fs2 = "0.4"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
